Horizontal Scrolling Bug fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,3 +63,6 @@ input[type="date"]:valid:before {
 }
 
 
+html  {
+  overflow-x: hidden;
+  }
